--- a/_naked.html
+++ b/_naked.html
@@ -20,6 +20,6 @@
 
 	<!-- The Javascript is coming -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-	<script type="text/javascript" src="_js/script.js"></script>
+	<script src="_js/script.js"></script>
 </body>
 </html>
