Move basic pattern layout styles into source.html
Makes it easier to work on just styles for the components of your project rather than also having to worry about whether it will mess up your pattern primer

--- a/source.html
+++ b/source.html
@@ -4,14 +4,40 @@
 	<meta charset="utf-8">
 	<title>Pattern Primer</title>
 
-	<!-- Add your stylesheets here -->
-	<link rel="stylesheet" href="_css/patterns.css"> <!-- Example stylesheet for example patterns -->
+	<!-- a starting point of sensible defaults -->
+	<link rel="stylesheet" href="css/normalize.css">
 
 	<!--[if lt IE 9]>
 	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
 
+	<!-- minimal styles to layout the patterns neatly -->
 	<style>
+	html {
+		border-top: 0.5em solid #693;
+		background-color: #eee;
+	}
+	body {
+		background-color: #fefefe;
+		background: rgba(255,255,255,0.9);
+		margin: 0 2.5%;
+		padding: 1em 2.5% 0;
+		font-size: 100%;
+		line-height: 1.875;
+		font-family: Cambria, Georgia, serif;
+		color: #333;
+		border-left: 1px solid;
+		border-right: 1px solid;
+		border-color: #ddd;
+		border-color: rgba(0,0,0,0.13);
+	}
+	.pattern .source textarea {
+	    width: 90%;
+		background-color: #FFFFFF;
+		border: 1px solid #CCCCCC;
+		border-radius: 0.25em;
+		padding: 0.25em;
+	}
 	.pattern {
 		clear: both;
 		overflow: hidden;
@@ -25,10 +51,22 @@
 		width: 30%;
 		float: right;
 	}
-	.pattern .source textarea {
-		width: 90%;
+	.pattern .source a:link,
+	.pattern .source a:visited {
+	    border-bottom-color: #336699;
+	    color: #336699;
+	}
+	.pattern .source a {
+	    border-bottom-style: dotted;
+	    border-bottom-width: 1px;
+	    text-decoration: none;
+	    white-space: pre-wrap;
 	}
 	</style>
 
+	<!-- Add your stylesheets here -->
+	<link rel="stylesheet" href="_css/patterns.css"> <!-- Example stylesheet for example patterns -->
+
 </head>
 <body>
+	
